applications/urbackup/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urbackup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: urbackup
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: urbackup
    spec:
      containers:
        - name: urbackup
          image: uroni/urbackup-server:2.4.x_i386
          imagePullPolicy: Always
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
          ports:
            - containerPort: 55414
              name: web
          volumeMounts:
            - mountPath: /backups
              name: backups
            - mountPath: /var/urbackup
              name: database
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: backups
          hostPath:
            path: /tank/backups
            type: Directory
        - name: database
          persistentVolumeClaim:
            claimName: urbackup-db-pvc
        - name: tmp
          emptyDir: {}
