applications/urbackup/31-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urbackup-svc
spec:
  selector:
    app: urbackup
  ports:
    - protocol: TCP
      port: 55414
      name: web
