applications/urbackup/30-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: urbackup-ir
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`backups.wesl.io`)
      kind: Rule
      services:
        - name: web
          port: 55414
